switched to pytest from unittest

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+atomicwrites==1.2.1
+attrs==18.2.0
 eyeD3==0.8.7
 grako==3.99.9
+more-itertools==4.3.0
 mutagen==1.41.1
 pathlib==1.0.1
+pluggy==0.8.0
+py==1.7.0
+pytest==3.10.0
 python-magic==0.4.15
 six==1.11.0
